Doc/library/_thread.rst
@@ -43,12 +43,22 @@ This module defines the following constants and functions:
 
 .. function:: start_new_thread(function, args[, kwargs])
 
-   Start a new thread and return its identifier.  The thread executes the function
-   *function* with the argument list *args* (which must be a tuple).  The optional
-   *kwargs* argument specifies a dictionary of keyword arguments. When the function
-   returns, the thread silently exits.  When the function terminates with an
-   unhandled exception, a stack trace is printed and then the thread exits (but
-   other threads continue to run).
+   Start a new thread and return its identifier.  The thread executes the
+   function *function* with the argument list *args* (which must be a tuple).
+   The optional *kwargs* argument specifies a dictionary of keyword arguments.
+
+   When the function returns, the thread silently exits.
+
+   When the function terminates with an unhandled exception,
+   :func:`sys.unraisablehook` is called to handle the exception. The *object*
+   attribute of the hook argument is *function*. By default, a stack trace is
+   printed and then the thread exits (but other threads continue to run).
+
+   When the function raises a :exc:`SystemExit` exception, it is silently
+   ignored.
+
+   .. versionchanged:: 3.8
+      :func:`sys.unraisablehook` is now used to handle unhandled exceptions.
 
 
 .. function:: interrupt_main()
